// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductThumbnail /> Check how renders should src be a link to product photo in order collection 1`] = `
<Styled(FlexWrapper)
  align="center"
  data-testid="ProductThumbnail"
  height="5"
  justify="center"
  width="5"
>
  <img
    alt="testAlt"
    data-testid="ProductThumbnail-img"
    src="http://192.168.1.109:4000/orders/o1/p1/photo"
  />
</Styled(FlexWrapper)>
`;

exports[`<ProductThumbnail /> Check how renders should src be a link to product photo in product collection 1`] = `
<Styled(FlexWrapper)
  align="center"
  data-testid="ProductThumbnail"
  height="5"
  justify="center"
  width="5"
>
  <img
    alt="testAlt"
    data-testid="ProductThumbnail-img"
    src="http://192.168.1.109:4000/products/p1/photo"
  />
</Styled(FlexWrapper)>
`;

exports[`<ProductThumbnail /> Check how renders should src be a noPhoto 1`] = `
<Styled(FlexWrapper)
  align="center"
  data-testid="ProductThumbnail"
  height="5"
  justify="center"
  width="5"
>
  <img
    alt="testAlt"
    data-testid="ProductThumbnail-img"
    src="no-photo.png"
  />
</Styled(FlexWrapper)>
`;
